# k2k_quiet_and_proud

./: .gitignore  BUILDING.md  Cargo.toml  LICENSE  README.md  analyze_keys.py  capture-firmware.py  flake.nix  flash_dfu.py  flash_dfu.sh  generic_boot20_pc13.elf  memory.x  openocd.cfg  openocd.gdb  rust-toolchain  safe_firmware.py  start.gdb
.cargo/: config
src/: .usbout.rs.swp  hid.rs  keyboard.rs  main.rs  matrix.rs  myhandlers.rs  trallocator.rs  usbout.rs
thumb_keys/: kinesis_thumb_keys.scad  kinesis_thumb_keys.stl  thumbkeys.scad.py
