[package]
name = "k2k_advantage"
version = "0.1.0"
authors = [ "Tyberius Prime <tyberius_prime@coonabibba.de>"]
edition = "2018"

[dependencies]
alloc-cortex-m = "0.4.2"
cortex-m = "0.7.4"
cortex-m-rtfm = "0.4.3" #todo: upgrade to 0.4.3
cortex-m-rt = { version = "0.6.10", features = ["device"] }
#cortex-m-semihosting = "0.3.2"
debouncing="0.2.0"
either = {version = "1.5", default-features = false}
embedded-hal = "0.2.3"
nb = "0.1.2"
no-std-compat = {version="0.4.1", features=["alloc", ]}
panic-halt = "*"
ssd1306="0.7.0"
#panic-semihosting="*"
smallbitvec = "2.5.1"
stm32f1xx-hal = { version = "0.6.1", features = ["rt", "stm32f103", "stm32-usbd", "high"] }
#stm32-usbd = { version = "0.3.0", features = ["stm32f103xx"] }
usb-device = "0.2.0"


[dependencies.keytokey]
git = "https://github.com/TyberiusPrime/KeyToKey"

[dependencies.stm32f1]
version = "0.7.0" # must match stm32f1xx-hal
features = ["stm32f103", "rt"]

[profile.dev]
lto = true
opt-level = "z"
#incremental=true
debug = false

[profile.release]
lto = true
opt-level = "z"
debug = false
